<resources>
    <string name="app_name">Solana</string>
    <string name="search">Search</string>
    <string name="history_is_empty">History is empty</string>
    <string name="new_project">New project</string>
    <string name="confirmation">Confirmation</string>
    <string name="target_language">Target language</string>
    <string name="source_language">Source Language</string>
    <string name="choose_the_source_and_target_languages_for_translation">Choose the source and target languages for translation.</string>
    <string name="select_source_and_target_languages">Select Source and Target Languages</string>
    <string name="please_wait_exiting_the_app_will_stop_the_process">Please wait… Exiting the app will stop the process.</string>
    <string name="start_translation">Start Translation</string>
    <string name="progress">Progress:</string>
    <string name="translating">Translating…</string>
    <string name="select_subtitle_file">Select Subtitle File</string>
    <string name="supported_formats_srt_txt">Supported formats: .srt, .txt</string>
    <string name="select_file">Select File</string>
    <string name="no_file_selected">No file selected</string>
    <string name="translate">Translate</string>
    <string name="start_to_translate">Start to translate</string>
    <string name="no_connection_message">The network connection is not established.</string>
    <string name="retry">TryAgain</string>
    <string name="no_connection_image_desc">Disconnection warning icon</string>
    <string name="language_settings">Language settings</string>
    <string name="language">Language</string>
    <string name="night_mode">Night Mode</string>
    <string name="use_system_settings">Use system settings</string>
    <string name="day_mode">Day Mode</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="application_rules_and_regulations">Application rules and regulations</string>
    <string name="comment">Comment</string>
    <string name="comment_on_the_application">Comment on the application</string>
    <string name="communication_with_the_publisher">Communication with the publisher</string>
    <string name="language_selection">Language selection</string>
    <string name="settings">Settings</string>
    <string name="edit_subtitle">Edit Subtitle</string>
    <string name="subtitle_text">Subtitle Text</string>
    <string name="end_time_hh_mm_ss">End Time (HH:MM:SS)</string>
    <string name="start_time_hh_mm_ss">Start Time (HH:MM:SS)</string>
    <string name="save">Save</string>
    <string name="there_was_an_error_saving_the_file">There was an error saving the file</string>
    <string name="edit">edit</string>
</resources>