<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_large">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_subtitle"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/start_time_hh_mm_ss">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_time_hh_mm_ss">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEndTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subtitle_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSubtitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:gravity="top|start"
            android:padding="@dimen/padding"
            android:scrollbars="vertical"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="@dimen/margin_large"/>

</LinearLayout>
