<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.activities.SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_large">

            <!-- Language Settings -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/language_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language_settings"
                android:textSize="@dimen/title_size" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/language_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding"
                android:text="@string/language"
                app:drawableEndCompat="@drawable/expand_arrow" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large" />
            <!-- Dark Mode Settings -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dark_mode_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/night_mode"
                android:textSize="@dimen/title_size" />

            <!-- Radio Group for Dark Mode Options -->
            <RadioGroup
                android:id="@+id/dark_mode_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/system_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_system_settings" />

                <RadioButton
                    android:id="@+id/dark_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/night_mode" />

                <RadioButton
                    android:id="@+id/light_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_mode" />
            </RadioGroup>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large" />
            <!-- Terms of Use -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/terms_of_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_use"
                android:textSize="@dimen/title_size" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/terms_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding"
                android:text="@string/application_rules_and_regulations" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large" />
            <!-- Feedback Section -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment"
                android:textSize="@dimen/title_size" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/comment_on_the_application"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding"
                android:text="@string/comment_on_the_application" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large" />

            <!-- Contact Publisher -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/contact_publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/communication_with_the_publisher"
                android:textSize="@dimen/title_size" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/contact_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding"
                android:text="ایمیل: example@example.com\nشماره تماس: 123456789" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>