<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:layout_margin="16dp"
    style="@style/Theme.Solana.CardView.Outlined">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <!-- عنوان -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/file_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_subtitle_file"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <!-- یادآوری به کاربر درباره فرمت‌های فایل قابل قبول -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/file_formats_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supported_formats_srt_txt"
            android:textColor="?attr/colorSecondary"
            android:layout_marginTop="4dp"
            android:textAppearance="?attr/textAppearanceBody2" />

        <!-- دکمه انتخاب فایل -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_select_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_file"
            android:layout_marginTop="@dimen/margin_large" />

        <!-- نمایش نام فایل انتخاب شده -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_selected_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_file_selected"
            android:layout_marginTop="@dimen/margin_small"
            android:textAppearance="?attr/textAppearanceBody1" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
